# tegaki_animation_generator

./: Dockerfile  README.md  Untitled.ipynb  api.py  app.py  deploy.sh  docker-compose.yml  grantor.py  index.html  index_legacy.html  pyproject.toml  tutorial.html
backend/: Dockerfile  api.py  docker-compose.yml  grantor.py  requirements.txt
dev/: docker-compose.yml
frontend/: add_package.sh  build.sh  docker-compose.yml
frontend/react-sample/: package.json
frontend/react-sample/public/: index.html
frontend/react-sample/src/: App.css  App.js
ipynb/: Untitled.ipynb  cv.ipynb  out.apng
react-app/: Dockerfile  docker-compose.yml
react-app/react-sample/: package.json
react-app/react-sample/src/: App.css  App.js  components.js
templates/: index.html
trash/ipynb/: apng.ipynb
trash/simple/: app.py
