[tool.poetry]
name = "python_sampleapp"
version = "0.1.0"
description = ""
authors = ["wwwshwww <www.shinderu.www@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"
numpy = "^1.20.2"
opencv-python = "^4.5.1"
matplotlib = "^3.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
